# tidesdb-cpp

./: .gitignore  CMakeLists.txt  README.md  tidesdb-cpp.cpp  tidesdb-cpp.hpp  tidesdb.cpp  tidesdb.hpp
.github/workflows/: build_and_test_tidesdb.yml
test/: tests.cpp
